# CalcProj

./: CHANGELOG.md  CalcProj.cabal  test.html
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.0.2/: package.cache  (+1 more)
lib/: Bread.hs
recipes/: 50% Emmer (Farro) Sourdough Bread.md  Basic All Purpose Sourdough Bread.md  Breadtopia Sourdough Thanksgiving Feast.md  Fugazzeta (Stuffed Pizza).md  German Souls Bread (SchwÃ¤bische Seelen).md  Herb and Tahini Sourdough Bread.md  Homemade Granola.md  How to Nixtamalize Corn for Tortillas, Tamales, Posole and More.md  Khorasan Wheat Sourdough Bread.md  Lithuanian Black Rye Sourdough Bread.md  Naturally Leavened Khorasan Sandwich Bread.md  Pastiera Napoletana.md  Piadina (Italian Flatbread).md  Pumpkin Pie with Sourdough Crust.md  Sesame Durum Sourdough Rolls.md  Sourdough Buckwheat Crepes.md  Sourdough Cinnamon Raisin Swirl Bread.md  Sourdough Crackers with Rye Flour and Black Sesame Seeds.md  Sourdough Glass Bread (Pan de Cristal).md  Sourdough Pan Pizza (Detroit & Sicilian Styles).md  Strawberry Rhubarb Einkorn Crumble.md  Sweet Tamales with Figs and Red Corn Masa.md  The Best Sourdough Stuffing.md  Toasted Buckwheat Porridge Sourdough Bread.md  Tourte de Seigle (100% Rye Bread).md  White Sonora and Blue Corn Sourdough Bread.md  Whole Grain Chelsea Buns with Cinnamon and Sage.md  Whole Grain Sourdough Bagels.md  Whole Wheat Oat Porridge Sourdough Bread.md  Whole Wheat Sourdough Hokkaido Milk Bread.md
src/: Main.hs
