cabal-version:      2.4
name:               CalcProj
version:            0.1.0.0

common common-settings
    default-language: Haskell2010
    build-depends: base ^>= 4.15.1.0
    ghc-options: -Wall

library Bread
    import: common-settings
    hs-source-dirs: lib
    build-depends: directory, tagsoup, bytestring, http-client-tls, http-client
    exposed-modules: Bread 

executable CalcProj
    import: common-settings
    main-is: Main.hs
    hs-source-dirs: src
    build-depends: Bread
